⚡️ perf(AI): 引入AI摘要并发处理以提升性能
- 【性能优化】引入AI摘要并发处理机制，通过 `ThreadPoolExecutor` 并发调用AI接口，大幅提升处理大量新项目时的效率。
- 【配置更新】
    - `config.yml` 中新增 `ai.concurrency` 参数，默认为 `5`，用于控制并发线程数。
    - `README.md` 和 `config.yml` 中 `max_readme_length` 从 `4000` 增加到 `8000`，允许处理更长的 README 内容。
    - 新增 `MAX_CONCURRENCY` 环境变量支持，允许通过环境变量覆盖并发数。
- 【代码重构】
    - `scripts/sync_stars.py` 中重构了增量处理逻辑，先识别所有待处理的新仓库，再进行并发处理。
    - 为 `DataStore` 类添加 `threading.Lock`，确保在并发环境下数据保存和更新的线程安全。
- 【文档更新】更新 `README.md`，说明新的并发特性、配置变量和本地运行时的环境变量设置。

--- a/config.yml
+++ b/config.yml
@@ -24,13 +24,16 @@ ai:
   model: "gpt-4o-mini"
 
   # README 截取最大长度（字符数），避免 Token 超限
-  max_readme_length: 4000
+  max_readme_length: 8000
 
   # 请求超时时间（秒）
   timeout: 60
 
   # AI 请求失败时的重试次数
   max_retries: 3
+
+  # 并发生成摘要的线程数
+  concurrency: 5
 
 # ── 输出配置 ─────────────────────────────────────────────
 output:
